Expose actor resolution API
